--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve",
-    "build": "npx webpack --mode=production",
-    "build-dev": "npx webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack --mode=production"
   },
   "author": "Álvaro E Matos",
   "license": "ISC",
-  "dependencies": {
-    "socket.io-client": "^4.7.2"
-  },
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
@@ -23,6 +18,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.4",
     "mini-css-extract-plugin": "^2.7.6",
+    "socket.io-client": "^4.7.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
