--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-watch": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "Álvaro E Matos",
   "license": "ISC",
@@ -13,7 +13,9 @@
     "app-root-path": "^3.1.0",
     "express": "^4.18.2",
     "node-localstorage": "^3.0.5",
-    "nodemon": "^3.0.2",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
