--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "concurrently --kill-others 'cd client && npm run start' 'cd server && npm run start-watch'",
-    "install": "npm install && concurrently 'cd client && npm install' 'cd server && npm install'",
-    "build": "concurrently 'cd client && npm run build && cd .. && cpy client/build/* dist/public' 'cpy server/* !server/videos/* dist' && cpy server/videos/*.md dist"
+    "dev": "concurrently --kill-others \"cd client && npm run start\" \"cd server && npm run start-watch\"",
+    "install": "npm install && concurrently \"cd client && npm install\" \"cd server && npm install\"",
+    "build": "concurrently \"cd client && npm run build && cd .. && cpy client/build/* dist/public\" \"cpy server/* !server/videos/* dist\" && cpy server/videos/*.md dist"
   },
   "repository": {
     "type": "git",
