--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "html-webpack-plugin": "^5.5.4",
     "mini-css-extract-plugin": "^2.7.6",
     "socket.io-client": "^4.7.2",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
